<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="skipBu">Skip </string>
    <string name="searchBu">Search</string>
    <string name="calculator">Calculator</string>
    <string name="flashlight">Flashlight</string>
    <string name="call">Phone Call</string>
    <string name="camera">Camera</string>
    <string name="message">Message</string>
    <string name="alarm">Alarm</string>

    <string name="text">TEXT</string>
    <string name="edit">Edit</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="point">.</string>
    <string name="add">+</string>
    <string name="equal">=</string>
    <string name="clear">clear</string>

    <string name="phone_number">Phone Number</string>
    <string name="bt_send">Send</string>
    <string name="tv_text">Text</string>
    <string name="tv_phnum">Phone Number</string>

    <string name="music_title">Music Title</string>
    <string name="music_singer">Music Singer</string>
    <string name="music_size">Music Size</string>
    <string name="music_duration">Music Duration</string>
</resources>