<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:stretchColumns="*"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewDavid"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_marginTop="35dp"
        android:gravity="end"
        android:text="@string/text"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editViewDavid"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:gravity="end"
        android:inputType="text"
        android:textCursorDrawable="@null"
        android:textSize="30sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="#000000"/>


    <TableRow
        android:id="@+id/tableRow1"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_7"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:textSize="25sp"
            android:layout_height="match_parent"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:textSize="25sp"
            android:layout_height="match_parent"
            android:text="@string/_9" />

        <Button
            android:id="@+id/buttonDivide"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/div"
            android:textSize="25sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button5"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonMultiply"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/mul"
            android:textSize="25sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_2"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonMinus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub"
            android:textColor="#607D8B"
            android:textSize="25sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button0"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonPoint"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/point"
            android:textColor="#607D8B"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonPlus"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textColor="#607D8B"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonEqual"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:textColor="#607D8B"
            android:textSize="25sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="4"
            android:background="#3F51B5"
            android:text="@string/clear"
            android:textColor="#00C853"
            android:textSize="25sp" />

    </TableRow>

</TableLayout>